--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -19,7 +23,18 @@
         android:theme="@style/Theme.TranslatorApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".TranslationHistory"
+            android:exported="false" />
+        <activity
+            android:name=".HistoryAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".TranslationDBHelper"
+            android:exported="false" />
+        <activity
+            android:name=".HistoryActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.gms.version.DEPENDEENCIES"
